#ifndef FULTIMA_GEN_ITEMGENERATORSYSTEM_H
#define FULTIMA_GEN_ITEMGENERATORSYSTEM_H

#include "GeneratorStrategy.h"
#include "QualityGenerator.h"
#include <map>

class ItemGeneratorSystem
{
    std::map<ItemType, std::unique_ptr<GeneratorStrategy>> strategies;
    std::map<ItemType, std::unique_ptr<QualityGenerator>> quality_gen;

    static ItemType getRandomItemType();
    static bool isItemPriceValid(const Item &item, const Player &player);

public:
    ItemGeneratorSystem();

    [[nodiscard]] std::unique_ptr<Item> generateItem(ItemType type, const Player &player);
    void assignQuality(ItemType type, Item *item);
};


#endif //FULTIMA_GEN_ITEMGENERATORSYSTEM_H
